Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 
 <p>Musical UX Smart Enhancer</p>
 
+<h2>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h2>
+
+<p><a href="https://github.com/catalin-/muxar/wiki/Architecture">Architecture</a><br>
+<a href="https://github.com/catalin-/muxar/wiki/Diagrams">Diagrams</a><br>
+<a href="https://github.com/catalin-/muxar/wiki/External-services">External services</a><br>
+<a href="https://github.com/catalin-/muxar/wiki/API">API</a><br>
+<a href="https://github.com/catalin-/muxar/wiki/Biography-and-resources">Resources</a>  </p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/catalin-/muxar">Muxar</a> is maintained by <a href="https://github.com/catalin-">catalin-</a>.</span>
 
