Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 <h2>
 <a id="diagrams" class="anchor" href="#diagrams" aria-hidden="true"><span class="octicon octicon-link"></span></a>Diagrams</h2>
 
-<h2>
-<a id="activity-diagram" class="anchor" href="#activity-diagram" aria-hidden="true"><span class="octicon octicon-link"></span></a>Activity diagram</h2>
+<hr>
 
-<p><img src="https://raw.githubusercontent.com/catalin-/muxar/master/docs/diagrams/activity_diagram.png" alt="Activity diagram">  </p>
+<p><strong>Activity diagram</strong><br>
+<img src="https://raw.githubusercontent.com/catalin-/muxar/master/docs/diagrams/activity_diagram.png" alt="Activity diagram">  </p>
 
 <h2>
 <a id="external-services" class="anchor" href="#external-services" aria-hidden="true"><span class="octicon octicon-link"></span></a>External services</h2>
