Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ Entities (groups) related to Glam-rock: <a href="http://data.seevl.fm/entities/J
 
 <hr>
 
-<p><a href="http://petstore.swagger.io/?url=https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">Documentation</a>
-<a href="https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">Download (JSON)</a> </p>
+<p><a href="http://petstore.swagger.io/?url=https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">Documentation</a><br>
+<a href="https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">Download (JSON)</a>  </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/catalin-/muxar">MUXar</a> is maintained by <a href="https://github.com/catalin-">catalin-</a>.</span>
