Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
 <p><strong>Activity diagram</strong><br>
 <img src="https://raw.githubusercontent.com/catalin-/muxar/master/docs/diagrams/activity_diagram.png" alt="Activity diagram">  </p>
 
+<p><strong>Package diagram</strong><br>
+<img src="https://raw.githubusercontent.com/catalin-/muxar/master/docs/diagrams/package_diagram.png" alt="Package diagram">  </p>
+
+<h2>
+<a id="mockups" class="anchor" href="#mockups" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mockups</h2>
+
+<hr>
+
 <h2>
 <a id="external-services" class="anchor" href="#external-services" aria-hidden="true"><span class="octicon octicon-link"></span></a>External services</h2>
 
