Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
 <hr>
 
+<p><img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/mockups.pdf" alt=""></p>
+
 <h2>
 <a id="external-services" class="anchor" href="#external-services" aria-hidden="true"><span class="octicon octicon-link"></span></a>External services</h2>
 
