Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,22 @@
 
 <hr>
 
-<p><img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/mockups.pdf" alt=""></p>
+<p><img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/LoginPage.png" alt="Login Page"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Tell%20us%20more....png" alt="Tell us more..."><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Tell%20us%20more...%20copy.png" alt="Tell us more... copy"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Main%20Page.png" alt="Main Page"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Inside%20playlist.png" alt="Inside playlist"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Genres.png" alt="Genres"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Moods.png" alt="Moods"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Moods%20playing.png" alt="Moods playing"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Moods%20click.png" alt="Moods click"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Cultures%20Worldwide.png" alt="Cultures Worldwide"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Cultures%20Europe.png" alt="Cultures Europe"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Cultures%20Romania.png" alt="Cultures Romania"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Messages.png" alt="Messages"><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Messages%20inside%20conversation.png" alt="Messages inside conversation">  </p>
+
+<p><a href="https://github.com/catalin-/muxar/raw/master/docs/mockups/Muxar%20Mockups.pdf">Download</a> all mockups.  </p>
 
 <h2>
 <a id="external-services" class="anchor" href="#external-services" aria-hidden="true"><span class="octicon octicon-link"></span></a>External services</h2>
@@ -118,12 +133,13 @@ Entities (artists) related to Social Distortion: <a href="http://data.seevl.fm/e
 Entities (groups) related to Glam-rock: <a href="http://data.seevl.fm/entities/JhMrUMw9/related">http://data.seevl.fm/entities/JhMrUMw9/related</a>  </p>
 
 <h2>
-<a id="muxar-api" class="anchor" href="#muxar-api" aria-hidden="true"><span class="octicon octicon-link"></span></a>MUXar API</h2>
+<a id="muxar-documentation" class="anchor" href="#muxar-documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>MUXar Documentation</h2>
 
 <hr>
 
-<p><a href="http://petstore.swagger.io/?url=https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">Documentation</a><br>
-<a href="https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">Download (JSON)</a>  </p>
+<p><a href="">Wiki</a><br>
+<a href="http://petstore.swagger.io/?url=https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">API</a><br>
+<a href="https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">API - download JSON</a>  </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/catalin-/muxar">MUXar</a> is maintained by <a href="https://github.com/catalin-">catalin-</a>.</span>
