Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,19 +51,33 @@
 
 <hr>
 
-<p><img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/LoginPage.png" alt="Login Page"><br>
+<p><strong>Login Page</strong><br>
+<img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/LoginPage.png" alt="Login Page"><br>
+<strong>Tell us more...</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Tell%20us%20more....png" alt="Tell us more..."><br>
+<strong>Tell us more... preferred</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Tell%20us%20more...%20copy.png" alt="Tell us more... copy"><br>
+<strong>Main Page</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Main%20Page.png" alt="Main Page"><br>
+<strong>Inside playlist</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Inside%20playlist.png" alt="Inside playlist"><br>
+<strong>Genres</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Genres.png" alt="Genres"><br>
+<strong>Moods</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Moods.png" alt="Moods"><br>
+<strong>Moods playing</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Moods%20playing.png" alt="Moods playing"><br>
+<strong>Moods click</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Moods%20click.png" alt="Moods click"><br>
+<strong>Cultures Worldwide</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Cultures%20Worldwide.png" alt="Cultures Worldwide"><br>
+<strong>Cultures Europe</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Cultures%20Europe.png" alt="Cultures Europe"><br>
+<strong>Cultures Romania</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Cultures%20Romania.png" alt="Cultures Romania"><br>
+<strong>Messages</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Messages.png" alt="Messages"><br>
+<strong>Messages inside conversation</strong><br>
 <img src="https://github.com/catalin-/muxar/raw/master/docs/mockups/Messages%20inside%20conversation.png" alt="Messages inside conversation">  </p>
 
 <p><a href="https://github.com/catalin-/muxar/raw/master/docs/mockups/Muxar%20Mockups.pdf">Download</a> all mockups.  </p>
