Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Entities (groups) related to Glam-rock: <a href="http://data.seevl.fm/entities/J
 
 <hr>
 
-<p><a href="">Wiki</a><br>
+<p><a href="https://github.com/catalin-/muxar/wiki">Wiki</a><br>
 <a href="http://petstore.swagger.io/?url=https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">API</a><br>
 <a href="https://raw.githubusercontent.com/catalin-/muxar/master/docs/rest_api_swagger.json">API - download JSON</a>  </p>
 
