Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">MUXar</h1>
-      <h2 class="project-tagline">Musical UX Smart Enhancer, project, infoiasi, wade, web</h2>
+      <h2 class="project-tagline">Musical UX Smart Enhancer, #project, #infoiasi, #wade, #web</h2>
       <a href="https://github.com/catalin-/muxar" class="btn">View on GitHub</a>
       <a href="https://github.com/catalin-/muxar/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/catalin-/muxar/tarball/master" class="btn">Download .tar.gz</a>
